messaging_app/messaging_app/green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-green
  labels:
    app: messaging-app
    version: green
spec:
  replicas: 0  # start at 0; we'll scale up during rollout
  selector:
    matchLabels:
      app: messaging-app
      version: green
  template:
    metadata:
      labels:
        app: messaging-app
        version: green
    spec:
      containers:
      - name: messaging-app
        image: kobeyvines/messaging-app:green  # <-- replace
        ports:
        - containerPort: 8000
